--- a/templates/admin_panel/lista.html
+++ b/templates/admin_panel/lista.html
@@ -7,25 +7,24 @@
     <h1 class="text-center my-4">Administración de Productos</h1>
 
     <div class="d-flex justify-content-end mb-3">
+        <!-- Botón para abrir el modal para agregar un producto -->
         <a href="{% url 'admin_panel:producto_crear' %}" class="btn btn-success btn-sm">
             <i class="bi bi-plus-lg"></i>
             Agregar
         </a>
     </div>
 
-    <table class="table table-striped">
+    <table class="table table-borderless">
         <thead>
             <tr>
                 <th>Nombre</th>
                 <th>Descripción</th>
                 <th>Precio</th>
-                <th></th>
             </tr>
         </thead>
         <tbody>
             {% for producto in productos %}
             <tr>
-                <!-- Hacer clic en el nombre para editar -->
                 <td>
                     <a href="{% url 'admin_panel:producto_editar' producto.id %}" class="text-decoration-none text-primary">
                         {{ producto.nombre }}
@@ -34,13 +33,13 @@
                 <td>{{ producto.descripcion|truncatewords:10 }}</td>
                 <td>${{ producto.precio }}</td>
                 <td>
-                    <!-- Botón para eliminar con confirmación -->
-                    <form action="{% url 'admin_panel:producto_eliminar' producto.id %}" method="post" onsubmit="return confirm('¿Estás seguro de que quieres eliminar este producto?');">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger btn-sm">
-                            <i class="bi bi-trash"></i>
-                        </button>
-                    </form>
+                    <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#genericModal"
+                            data-modal-title="Eliminar Producto"
+                            data-modal-form-action="{% url 'admin_panel:producto_eliminar' producto.id %}"
+                            data-modal-body="¿Estás seguro de que quieres eliminar <strong>{{ producto.nombre }}</strong>?"
+                            data-modal-submit-text="Eliminar">
+                        <i class="bi bi-trash"></i>
+                    </button>
                 </td>
             </tr>
             {% empty %}
@@ -51,4 +50,33 @@
         </tbody>
     </table>
 </div>
+
+<!-- Incluir el modal genérico -->
+{% include 'common/_modal.html' %}
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var modal = document.getElementById('genericModal');
+        modal.addEventListener('show.bs.modal', function (event) {
+            var button = event.relatedTarget;
+
+            var modalTitle = button.getAttribute('data-modal-title');
+            var modalBody = button.getAttribute('data-modal-body');
+            var modalFormAction = button.getAttribute('data-modal-form-action');
+            var modalSubmitText = button.getAttribute('data-modal-submit-text');
+
+            document.getElementById('genericModalLabel').textContent = modalTitle;
+
+            var modalBodyElement = modal.querySelector('.modal-body');
+            modalBodyElement.innerHTML = modalBody;
+
+            var modalForm = document.getElementById('modalForm');
+            if (modalForm) {
+                modalForm.action = modalFormAction;
+                modalForm.querySelector('button[type="submit"]').textContent = modalSubmitText;
+            }
+        });
+    });
+</script>
+
 {% endblock %}
