Added the media ROOT PATH on settings.py
Added the media/ directory path to ensure it will store the images in the correct directory. Finally, added a new column on the page of the products to show the images and ensure a better user expirience.

--- a/templates/admin_panel/lista.html
+++ b/templates/admin_panel/lista.html
@@ -17,6 +17,7 @@
     <table class="table table-borderless">
         <thead>
             <tr>
+                <th>Imagen</th>
                 <th>Nombre</th>
                 <th>Descripción</th>
                 <th>Precio</th>
@@ -25,6 +26,13 @@
         <tbody>
             {% for producto in productos %}
             <tr>
+                <td>
+                    {% if producto.imagen %}
+                        <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}" class="img-thumbnail" width="100">
+                    {% else %}
+                        <span class="text-danger text-secondary">No image Found</span>
+                    {% endif %}
+                </td>
                 <td>
                     <a href="{% url 'admin_panel:producto_editar' producto.id %}" class="text-decoration-none text-primary">
                         {{ producto.nombre }}
