--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,9 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-auto px-0 border-end">
-            {% include 'common/_sidebar.html' %}
+            {% if show_sidebar %}
+                {% include 'common/_sidebar.html' %}
+            {% endif %}
           </div>
           <main class="col px-3 py-3 py-md-2">
             <h5 class="fw-bold mt-2 mb-4 text-primary-emphasis">{{ page_title }}</h5>
