--- a/templates/admin_panel/lista.html
+++ b/templates/admin_panel/lista.html
@@ -19,7 +19,7 @@
             <tr>
                 <th class="d-none d-sm-block">Imagen</th>
                 <th>Nombre</th>
-                <th>Descripción</th>
+                <th>Categoría</th>
                 <th>Precio</th>
             </tr>
         </thead>
@@ -38,7 +38,7 @@
                         {{ producto.nombre }}
                     </a>
                 </td>
-                <td>{{ producto.descripcion|truncatewords:10 }}</td>
+                <td>{{ producto.categoria.nombre }}</td>
                 <td>${{ producto.precio }}</td>
                 <td>
                     <button class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#genericModal"
