--- a/templates/kitchen_panel/panel.html
+++ b/templates/kitchen_panel/panel.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}Panel de Cocina - FitoMenu{% endblock %}
+
 {% block content %}
 <div class="container mt-4">
-    <h2 class="text-center">📌 Panel de Cocina</h2>
-
     <div id="orders-container" class="row g-3">
         <!-- Aquí se mostrarán los pedidos dinámicamente -->
     </div>
