--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
+    <meta name="csrf-token" content="{{ csrf_token }}">
     <title>Pollo Fito {% if page_title %} | {{ page_title }} {% endif %}</title>
     <link type="image/x-icon" rel="icon" href="{% static 'favicon.ico' %}"/>
     <link type="text/css" rel="stylesheet" href="{% static 'css/main.css' %}"/>
