--- a/templates/menu/menu_lista.html
+++ b/templates/menu/menu_lista.html
@@ -65,7 +65,7 @@
 <!-- Contador del carrito -->
 {% comment %} <div id="carrito-contador" style="position: fixed; bottom: 20px; right: 20px; background: red; color: white; padding: 10px 15px; border-radius: 50%; font-size: 1.2rem;">
   0
-</div>
+</div> {% endcomment %}
 
 <script>
   let productoId = null;
@@ -152,6 +152,6 @@
     })
     .catch(error => console.error("Error:", error));
 }  
-</script> {% endcomment %}
+</script>
 
 {% endblock %}
