--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link type="image/x-icon" rel="icon" href="{% static 'favicon.ico' %}"/>
     <link type="text/css" rel="stylesheet" href="{% static 'css/main.css' %}"/>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}" defer></script>
-{#    <script src="{% static 'js/htmx/htmx.min.js' %}" defer></script>#}
+    <script src="{% static 'js/htmx/htmx.min.js' %}" defer></script>
   </head>
   <body>
 {#    {% if user.is_authenticated %}#}
