--- a/templates/common/_navbar.html
+++ b/templates/common/_navbar.html
@@ -32,7 +32,7 @@
               </li>
           {% else %}
             <li><a class="dropdown-item" href="{% url 'admin_panel:lista_ordenes' %}">Órdenes</a></li>
-            <li><a class="dropdown-item" href="{% url 'admin_panel:lista_productos' %}">Administración</a></li>
+            <li><a class="dropdown-item" href="{% url 'admin_panel:lista_productos' %}">Productos</a></li>
             <li><a class="dropdown-item" href="{% url 'kitchen:kitchen_panel' %}">Cocina</a></li>
               <li>
                 {% if numero_mesa %}
