--- a/templates/menu/menu_lista.html
+++ b/templates/menu/menu_lista.html
@@ -160,6 +160,26 @@
 {% block title %}Menú - FitoMenu{% endblock %}
 
 {% block content %}
+    <style>
+      .product-card {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+    
+      .product-image {
+        height: 180px;
+        object-fit: cover;
+        border-bottom: 1px solid #ddd;
+      }
+    
+      .product-body {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+    </style>
 <div class="container">
   <div class="row mb-4">
     <div class="col-md-8">
@@ -181,28 +201,28 @@
 
   <div class="row">
     {% for producto in productos %}
-      <div class="col-md-4 mb-4">
-        <div class="card h-100">
-          {% if producto.imagen %}
-            <img src="{{ producto.imagen.url }}" class="card-img-top" alt="{{ producto.nombre }}">
-          {% else %}
-            <img src="{% static 'img/default.png' %}" class="card-img-top" alt="Sin imagen">
-          {% endif %}
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">{{ producto.nombre }}</h5>
-            <p class="card-text">${{ producto.precio }}</p>
-            <div class="mt-auto">
-              {% if orden_valida %}
-                <button class="btn btn-sm btn-primary w-100" onclick="abrirModalAgregar({{ producto.id }}, '{{ producto.nombre }}')">
-                    Agregar
-                </button>
-              {% else %}
-                <button class="btn btn-sm btn-secondary w-100" disabled>Debes ingresar tu orden</button>
-              {% endif %}
+      <div class="col-md-4 col-sm-6 mb-4">
+          <div class="card product-card shadow-sm h-100">
+            {% if producto.imagen %}
+              <img src="{{ producto.imagen.url }}" class="card-img-top product-image" alt="{{ producto.nombre }}">
+            {% else %}
+              <img src="{% static 'img/default.png' %}" class="card-img-top product-image" alt="Sin imagen">
+            {% endif %}
+            <div class="card-body product-body">
+              <h5 class="card-title">{{ producto.nombre }}</h5>
+              <p class="card-text">${{ producto.precio }}</p>
+              <div class="mt-auto">
+                {% if orden_valida %}
+                  <button class="btn btn-sm btn-primary w-100" onclick="abrirModalAgregar({{ producto.id }}, '{{ producto.nombre }}')">
+                      Agregar
+                  </button>
+                {% else %}
+                  <button class="btn btn-sm btn-secondary w-100" disabled>Debes ingresar tu orden</button>
+                {% endif %}
+              </div>
             </div>
           </div>
         </div>
-      </div>
     {% endfor %}
   </div>
 </div>
